# crewai-rust

./: CLAUDE.md  CLEANUP.md  Cargo.toml  Makefile  PYPI_PREPARE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  setup_dev.sh
crewai_accelerate/: __init__.py  __main__.py  bootstrap.py  memory.py  shim.py
crewai_rust/: README.md  __init__.py  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPATIBILITY.md  INSTALLATION.md  PERFORMANCE.md  README.md  SUMMARY.md  TROUBLESHOOTING.md
examples/: basic_usage.py  example_usage.py  memory_acceleration.py  memory_replacement_example.py  performance_benchmark.py  serialization_example.py  task_execution_example.py  test_rust_integration.py  tool_execution_example.py  tool_optimization.py
scripts/: build_and_test.sh  run_tests.sh
src/: lib.rs
tests/: test_backward_compatibility.py  test_compatibility_report.py  test_comprehensive.py  test_memory.py  test_package_import.py
